:construction: add intro section

--- a/src/components/intro/Intro.module.css
+++ b/src/components/intro/Intro.module.css
@@ -1,11 +1,13 @@
 .container {
-  min-height: 80vh;
-  min-width: 100vw;
+  min-height: 70vh;
+  width: 70vw;
+
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   position: relative;
+  background-color: #1b1b1b;
 }
 .title {
   z-index: 2;
@@ -19,8 +21,4 @@
   color: white;
   font-size: 1.5rem;
   text-align: center;
-}
-
-.button {
-  padding-top: 3rem;
 }
