--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,7 @@
 html,
 body {
   max-width: 100vw;
-  background-color: #1b1b1b;
+  background-color: black;
 }
 
 a {
@@ -16,10 +16,10 @@ a {
 }
 
 .container {
-  background-color: #1b1b1b;
   min-height: 100vh;
   margin: 0 auto;
-  padding: 0 60px;
+  padding-left: 5vw;
+  padding-right: 5vw;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
