--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -1,4 +1,5 @@
 .container {
+  width: 100%;
   height: 5rem;
   display: Flex;
   justify-content: space-between;
@@ -7,13 +8,27 @@
 }
 
 .logo {
-  font-weight: bold;
-  font-size: 1.5rem;
-  padding-right: 1rem;
+  padding-top: 4vw;
+  padding-left: 1vw;
+}
+.logoText {
+  font-size: 1.6rem;
+  font-weight: 300;
+  letter-spacing: 0.2rem;
 }
 
 .links {
   display: flex;
   align-items: center;
-  gap: 0.6rem;
+  gap: 2rem;
+}
+.linkInactive,
+.linkActive {
+  padding-top: 1em;
+  letter-spacing: 0.2rem;
+  font-size: 12px;
+  font-weight: 200;
+}
+.linkActive {
+  border-bottom: 1px solid white;
 }
