--- a/src/components/Testimonials/Testimonials.module.css
+++ b/src/components/Testimonials/Testimonials.module.css
@@ -1,24 +1,51 @@
-.section-three-main-div {
+.outter {
+  color: black;
+  background-color: white;
+  width: 100vw;
+  padding: 0 5vw 0 5vw;
+}
+.container {
+  color: black;
+  background-color: white;
+
+  padding: 0 5vw 0 5vw;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+
+  border-style: solid;
+  border-width: 1px 0 0 0;
+  border-image: linear-gradient(to left, rgba(0, 0, 0, 0.05), rgb(0, 0, 0)) 0.5;
+}
+.title {
+  font-weight: 200;
+  font-size: 1em;
+  font-style: italic;
+  padding-bottom: 0.6em;
+}
+.main {
+  margin-top: 4em;
   display: grid;
   grid-template-rows: 1fr 50px;
   justify-items: center;
   row-gap: 1rem;
-  background-color: rgb(250, 251, 253);
+  background-color: white;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
 }
 
-.quotes-img-right {
+.quotesImgRight {
   justify-self: end;
-  background-image: url(/public/left.png);
+  background-image: url(../../../public/images/left.png);
   margin-right: 20px;
 }
 
-.quotes-img-left {
-  background-image: url(/public/right.png);
+.quotesImgLeft {
+  background-image: url(../../../public/images/right.png);
   margin-left: 20px;
 }
 
-.section-three-sub-div-one {
+.sub {
   display: grid;
   grid-template-columns: 10% 1fr 10%;
   justify-content: center;
@@ -26,14 +53,13 @@
   margin-top: 2rem;
 }
 
-.main-quotes-div {
-  /* width: 1110px; */
+.mainQuotes {
   transition: 1s;
   grid-column: 2 / 3;
   grid-row: 1 / 2;
 }
 
-.quotes-img {
+.quotesImg {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -43,8 +69,7 @@
 
 /* ------------------ */
 .para {
-  font-family: "Lato", sans-serif;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 .subText {
