--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -32,3 +32,35 @@
 .linkActive {
   border-bottom: 1px solid white;
 }
+
+@media (max-width: 750px) {
+  .container {
+    height: 9rem;
+  }
+  .logo {
+    padding-top: 30px;
+    padding-left: 0;
+  }
+  .logoText {
+    font-size: 1.1rem;
+    font-weight: 300;
+    letter-spacing: 0.2rem;
+  }
+  .links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.4rem;
+  }
+  .linkInactive,
+  .linkActive {
+    padding-top: 0.5em;
+    letter-spacing: 0.2rem;
+    font-size: 12px;
+    font-weight: 200;
+  }
+  .linkActive {
+    border: none;
+    color: rgb(170, 150, 42);
+  }
+}
