--- a/src/components/OurWork/OurWork.module.css
+++ b/src/components/OurWork/OurWork.module.css
@@ -56,3 +56,15 @@
   justify-content: center;
   align-items: center;
 }
+
+@media (max-width: 1150px) {
+  .card {
+    flex-direction: column;
+    padding-bottom: 6em;
+  }
+  .cardImageContainer > img {
+    width: 100%;
+    height: 100%;
+    transform: translateX(10px);
+  }
+}
