--- a/src/components/FinalCTA/FinalCTA.module.css
+++ b/src/components/FinalCTA/FinalCTA.module.css
@@ -44,3 +44,21 @@
 .profileContainer {
   padding-right: 4em;
 }
+
+@media (max-width: 768px) {
+  .blurBall {
+    display: none;
+  }
+  .blurBall2 {
+    display: none;
+  }
+  .title {
+    font-size: 40px;
+  }
+  .description {
+    width: 100%;
+  }
+  .profileContainer {
+    padding-right: 0;
+  }
+}
