--- a/src/app/pricing/page.module.css
+++ b/src/app/pricing/page.module.css
@@ -4,16 +4,22 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-bottom: 4rem;
+  margin-bottom: 12rem;
+  padding-top: 8em;
 }
 .title {
   color: white;
-  font-size: 3rem;
-  font-weight: bold;
-  padding: 1.5rem 1rem;
+  font-size: 3em;
+  font-weight: 400;
+
+  background: linear-gradient(to right, #eee, #333);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  color: transparent;
 }
 .cardContainer {
-  box-shadow: 0px 5px 10px 0px #b20e2c;
+  box-shadow: 0px 5px 10px 0px #d0d0d0;
   margin: 3rem;
   max-width: 20rem;
   display: flex;
@@ -23,7 +29,7 @@
 .cardContainer:hover {
   transform: scale(1.05);
   transition: all 0.1s ease-in-out;
-  box-shadow: 0px 10px 20px 2px #b20e2c;
+  box-shadow: 0px 10px 20px 2px rgb(170, 150, 42);
 }
 .card {
   padding: 2rem;
@@ -34,16 +40,23 @@
 }
 
 .cardTitle {
-  font-size: 2.2rem;
-  font-weight: bold;
-  padding: 1rem;
+  color: white;
+  font-size: 3em;
+  font-weight: 400;
+
+  background: linear-gradient(to right, #eee, #333);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  color: transparent;
+  padding-bottom: 1em;
 }
 .cardText {
   font-size: 1.5rem;
   padding: 0.5rem;
 }
 .cardButton {
-  background-color: #b20e2c;
+  background-color: rgb(170, 150, 42);
   color: white;
   margin: 2rem;
   border: none;
@@ -58,7 +71,7 @@
 }
 
 .cardButton:hover {
-  background-color: #940822;
+  background-color: rgb(170, 150, 42);
   font-size: large;
   font-weight: bold;
 }
