:speech_balloon: reword services copy

--- a/src/components/OurServices/OurServices.module.css
+++ b/src/components/OurServices/OurServices.module.css
@@ -25,7 +25,7 @@
   margin: 0 auto;
 }
 .container {
-  padding: 0 5vw 0 5vw;
+  padding: 4em 5vw 0 5vw;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -48,7 +48,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 4em;
+  padding: 6em 4em 4em 4em;
 }
 
 @media (max-width: 500px) {
