--- a/src/components/OurWork/OurWork.module.css
+++ b/src/components/OurWork/OurWork.module.css
@@ -31,7 +31,7 @@
   text-align: center;
 }
 .container {
-  padding: 0 5vw 0 5vw;
+  padding: 4em 5vw 0 5vw;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -48,7 +48,7 @@
 }
 .card {
   display: flex;
-  padding-top: 5em;
+  padding-top: 2em;
 }
 .buttonWrapper {
   width: 100%;
@@ -66,5 +66,8 @@
     width: 100%;
     height: 100%;
     transform: translateX(10px);
+  }
+  .textWrapper {
+    padding-top: 2em;
   }
 }
