--- a/src/components/BurgerMenu/BurgerMenu.module.css
+++ b/src/components/BurgerMenu/BurgerMenu.module.css
@@ -1,15 +1,10 @@
 .container {
-  width: 100vw;
-  padding: 0 5vw 0.6rem 5vw;
+  width: 100%;
   height: 5rem;
   display: Flex;
   justify-content: space-between;
   align-items: center;
   color: white;
-  background-color: black;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
 }
 .logoMobile {
   display: none;
@@ -25,26 +20,39 @@
   letter-spacing: 0.2rem;
 }
 
-.links {
-  height: 100%;
+.burgerLinks {
+  background-color: rgba(0, 0, 0, 0.937);
+  position: fixed;
+  top: 5rem;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 1000;
+
   display: flex;
-  align-items: flex-end;
-  gap: 2rem;
-}
-.linkInactive,
-.linkActive {
-  padding-top: 1em;
-  letter-spacing: 0.2rem;
-  font-size: 12px;
-  font-weight: 200;
-}
-.linkActive {
-  border-bottom: 1px solid white;
-}
-.burgerMenu {
-  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 4rem;
 }
 
+.linkInactive,
+.linkActive {
+  font-size: 2rem;
+  font-weight: 400;
+}
+.linkActive {
+  border-bottom: 3px solid rgb(135, 43, 255);
+}
+.burgerButton {
+  display: none;
+
+  transition: transform 0.2s ease-in-out;
+}
+.burgerButton:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
 @media (max-width: 850px) {
   .logoDesktop {
     display: none;
@@ -55,7 +63,10 @@
   .links {
     display: none;
   }
-  .burgerMenu {
+  .burgerContainer {
+    display: inline;
+  }
+  .burgerButton {
     border: 1px solid white;
     border-radius: 1rem;
     padding: 0.6rem;
