--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -96,7 +96,6 @@
   padding-left: 1rem;
 }
 .brands {
-  width: 90%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -135,10 +134,8 @@
   .brandsTitle {
     padding-top: 6em;
   }
-  .brands {
-    width: 100%;
-  }
+
   .brands > img {
-    transform: scale(0.6);
+    margin: 0 auto;
   }
 }
