update services to method

--- a/src/components/OurServices/OurServices.module.css
+++ b/src/components/OurServices/OurServices.module.css
@@ -10,18 +10,16 @@
   align-items: center;
 }
 .cardTitle {
-  font-weight: 300;
+  font-weight: 600;
   font-size: 1.1em;
   padding-bottom: 0.9em;
-  width: 80%;
   margin: 0 auto;
 }
 .cardText {
   font-weight: 300;
-  font-size: 0.7em;
+  font-size: 1rem;
   padding-bottom: 0.6em;
   line-height: 1.4em;
-  width: 80%;
   margin: 0 auto;
 }
 .container {
