--- a/src/app/contact/page.module.css
+++ b/src/app/contact/page.module.css
@@ -1,7 +1,6 @@
 .container {
   padding-left: 24px;
   color: white;
-  /* min-height: 160vh; */
   display: flex;
   flex-direction: column;
   margin-bottom: 8em;
@@ -79,4 +78,11 @@
   background-color: black;
   color: white;
   border: 1px solid white;
+}
+
+@media (max-width: 850px) {
+  .topTitle {
+    width: 100%;
+    font-size: 50px;
+  }
 }
