--- a/src/app/pricing/page.module.css
+++ b/src/app/pricing/page.module.css
@@ -19,17 +19,19 @@
   color: transparent;
 }
 .cardContainer {
-  box-shadow: 0px 5px 10px 0px #d0d0d0;
+  border: 2px solid white;
+  border-radius: 30px;
   margin: 3rem;
   max-width: 20rem;
   display: flex;
   flex-direction: column;
   justify-self: space-between;
+  transition-duration: 0.4s;
 }
 .cardContainer:hover {
   transform: scale(1.05);
   transition: all 0.1s ease-in-out;
-  box-shadow: 0px 10px 20px 2px rgb(170, 150, 42);
+  box-shadow: 0px 10px 20px 2px rgb(246, 151, 255);
 }
 .card {
   padding: 2rem;
@@ -56,10 +58,11 @@
   padding: 0.5rem;
 }
 .cardButton {
-  background-color: rgb(170, 150, 42);
+  background-color: rgb(132, 0, 255);
   color: white;
   margin: 2rem;
   border: none;
+  border-radius: 30px;
   padding: 0.6rem 1.2rem;
   text-align: center;
   text-decoration: none;
@@ -67,11 +70,10 @@
   font-size: 1rem;
   transition-duration: 0.4s;
   cursor: pointer;
-  clip-path: polygon(0 0, 100% 0, 100% 70%, 88% 100%, 0 100%);
 }
 
 .cardButton:hover {
-  background-color: rgb(170, 150, 42);
+  background-color: rgb(0, 151, 171);
   font-size: large;
   font-weight: bold;
 }
